add wordpress link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     <!-- FOOTER -->
     <footer>
       <p class="establish">Serving you since 1996 | &#169; xtian 2023 </p>
-      <p><a class="wordpress" href="https://lsteashop7.wordpress.com/"  target="_blank">Visit our Website</a></p>
+      <p>vigan city ilocos sur 2700</p>
+      <p><a class="wordpress" href="https://xtianbar.wordpress.com/my-cup-of-tea/"  target="_blank"><em>Visit our Website</em></a></p>
     </footer>
 
     </div>
